# SvgEditor

coding/: CMakeLists.txt
coding/SvgEditor/: CMakeLists.txt
coding/SvgEditor/coding/: kcustomwindow.cpp  kcustomwindow.h  kdrawellipse.cpp  kdrawellipse.h  kdrawfreeline.cpp  kdrawfreeline.h  kdrawhexagon.cpp  kdrawhexagon.h  kdrawingboard.cpp  kdrawingboard.h  kdrawline.cpp  kdrawline.h  kdrawrect.cpp  kdrawrect.h  kdrawtextbox.cpp  kdrawtextbox.h  kdrawtriangle.cpp  kdrawtriangle.h  mainwindow.cpp  mainwindow.h  shapebase.cpp  shapebase.h
coding/SvgEditor/res/image/: res.qrc
coding/SvgMain/: CMakeLists.txt
coding/SvgMain/src/: main.cpp
